# kursTELEIZM

./: .gitignore  CMakeLists.txt  README.md
cmake/: arm-none-eabi-gcc.cmake
doc/: CMakeLists.txt
flash_n_debug/: CMakeLists.txt
libs/: CMakeLists.txt
libs/libopencm3/: CMakeLists.txt  libopencm3_query.cmake
src/: CMakeLists.txt  main.cpp
